assets/css/style.css
/* Google Font */
@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap");

/* Css for animating elements in*/
.animation-element {
  opacity: 0;
  transform: translateY(50px);
  transition: all 3s ease-in-out;
}
.animation-active {
  opacity: 1;
  transform: translateY(0px);
}

/* Set global size for easy rem calculation and add some reset style */

* {
  font-size: 10px;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Mulish", sans-serif;
  background-color: #181822;
  color: #fafafb;
}
/* Navigation section Inspired by Code and Create tutorial on youtube*/

header {
  height: 100vh;
}
.logo a {
  position: fixed;
  top: 3em;
  left: 3em;
  color: #fafafb;
  font-size: 3vw;
  z-index: 500;
  text-decoration: none;
}
.hamburger {
  width: 4.5em;
  height: 4.5em;
  background-color: transparent;
  position: fixed;
  top: 2em;
  right: 2em;
  border: none;
  border-radius: 50%;
  z-index: 500;
  outline: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.line {
  width: 3em;
  height: 0.2em;
  background-color: #fafafb;
  margin: 0.2em 0;
  transform-origin: right;
  transition: all 0.75s;
}
.change .line1 {
  transform: rotate(-40deg) translateY(-5px);
  background-color: #181822;
}

.change .line2 {
  opacity: 0;
}

.change .line3 {
  transform: rotate(40deg) translateY(5px);
  background-color: #181822;
}
.nav-background {
  background-color: transparent;
  width: 4.5em;
  height: 4.5em;
  position: fixed;
  top: 2.2em;
  right: 2.2em;
  z-index: 200;
  border-radius: 50%;
  transition: all 1s ease;
}
.change .nav-background {
  background-color: #fafafb;
  transform: scale(150);
}
.navigation-list {
  height: 100vh;
  width: 100vw;
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  list-style: none;
  z-index: 300;
  opacity: 0;
  visibility: hidden;
  transition: all 0.75s ease;
}
.change .navigation-list {
  opacity: 1;
  visibility: visible;
}
.navigation-item {
  margin: 1vh 0;
}
.navigation-link {
  font-weight: 600;
  font-size: 5vw;
  letter-spacing: 0.4em;
  text-decoration: none;
  color: #181822;
  transition: all 0.3s ease-in-out;
}
.navigation-link:hover {
  color: grey;
}

/* Hero image section*/

.hero-img {
  height: 90vh;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background: url(../images/hero-img.jpg) no-repeat center center scroll;
  background-size: cover;
}
.right-gradient {
  height: 100vh;
  width: 75vw;
  position: absolute;
  top: 0;
  left: 0;
  background: linear-gradient(to right, #111, transparent);
}
.heading {
  position: absolute;
  top: 30%;
  left: 5%;
  border-left: #fafafb 2px solid;
  padding: 0 0 3em 4em;
  display: flex;
  flex-direction: column;
}
.heading h1 {
  font-size: 10vw;
  color: #fafafb;
  font-weight: 800;
}
.heading p {
  margin-top: 4em;
  color: #fafafb;
  font-size: 3vw;
}
.heading a {
  font-size: 3vw;
  font-weight: 600;
  border: #fafafb 2px solid;
  text-decoration: none;
  margin-top: 4em;
  width: 10em;
  text-align: center;
  background-color: #fafafb;
  color: #181822;
  border-radius: 2em;
  transition: all 0.3s ease-in-out;
}
.heading a:hover {
  background-color: grey;
}
.social-media {
  position: absolute;
  right: 15%;
  top: 50%;
  display: flex;
  flex-direction: column;
  list-style: none;
}

.social-media-links i {
  font-size: 2em;
  color: #fafafb;
  margin-top: 3em;
  transition: color 0.5s ease;
}
.social-media-links i:hover {
  color: grey;
}

/* About Section */

.about-col {
  height: 40vh;
}
.about-img {
  max-height: 100%;
  max-width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}
.bottom-gradient {
  content: "";
  height: 15vh;
  width: 100vw;
  position: absolute;
  bottom: 0;
  left: 0;
  background: linear-gradient(to top, #181822, transparent);
}
.about-text {
  color: #fafafb;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  text-align: left;
}
.about-text h1 {
  font-size: 10vw;
  font-weight: 800;
}
.about-text p {
  font-size: 3.5vw;
  font-weight: 300;
  padding: 2em;
}

/* Destination Section */
.destination-heading-section{
    height:35vh;
}
#destinations {
  height: 100vh;
}
.destination-heading h1 {
  font-weight: 800;
  font-size: 6vw;
  text-align: center;
  padding: 0.5em 0;
}
.cities-row,
.beaches-row {
  height: 50vh;
}


/* Media Querys*/

@media (min-width: 576px) {
  .logo a {
    top: 3em;
    left: 3em;
    font-size: 1.75vw;
  }
  .nav-background {
    top: 3.2em;
    right: 3.2em;
  }
  .hamburger {
    width: 5.5em;
    height: 5.5em;
    top: 3em;
    right: 3em;
  }
  .navigation-link {
    font-size: 4vw;
  }
  .hero-img {
  height: 100vh;
  }
  .heading {
    left: 10%;
  }
  .heading h1 {
    font-size: 6vw;
  }
  .heading p {
    margin-top: 2em;
    font-size: 1.2vw;
  }
  .heading a {
    font-size: 1.5vw;
  }
  .social-media {
    top: 25%;
    right: 10%;
  }
  .social-media-links i {
    font-size: 2.75em;
    margin-top: 2em;
  }
  .about-col {
    height: 50vh;
  }
  .about-text h1 {
    font-size: 5vw;
  }
  .about-text p {
    font-size: 2vw;
  }
}
@media only screen and (min-width: 800px) and (max-width: 1000px) and (orientation:landscape){
    .social-media-links i {
    font-size: 2em;
    margin-top: 1.5em;
  }
  .about-col {
    height: 100vh;
  }
   .navigation-link {
    font-size: 2vw;
  }
}
@media (min-width: 820px) {
  .logo a {
    top: 2em;
    left: 3em;
    font-size: 1vw;
  }
  .navigation-link {
    font-size: 2.5vw;
  }
  .about-col {
    height: 100vh;
  }
  .social-media {
    right: 7.5%;
  }
  .social-media-links i {
    font-size: 3em;
    margin-top: 3em;
  }
  .about-col {
    height: 100vh;
  }
  .about-text h1 {
    font-size: 5vw;
  }
  .about-text p {
    font-size: 1vw;
    padding: 2em 3em 0 1em;
  }
}

